--- a/CRUD.html
+++ b/CRUD.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Basic CRUD App</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="CRUD.css">
 </head>
 <body>
   <h1>CRUD App (Local Only)</h1>
@@ -11,6 +11,6 @@
   <button onclick="addItem()">Add</button>
   <ul id="itemList"></ul>
 
-  <script src="script.js"></script>
+  <script src="CRUD.js"></script>
 </body>
 </html>
